--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 			<!-- Page end -->
 		</div>
 		<div class="copyright">
-        <p class="text-center text-md-end text-xl-start"> 
+<!--         <p class="text-center text-md-end text-xl-start"> 
                 All Rights Reserved
-              </p>
+              </p> -->
         </div>
 	</div>
 	<!-- Main section end -->
