--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
 						<div class="hero-track">
 							<div class="hs-item set-bg" data-setbg="img/hero/new/billy-pasco-mpMaD_BzP8I-unsplash.jpg">
 								<div class="hs-info">
-									<h5>Ice Cold Love</h5>
+									<h5>Sudtirol, Italy</h5>
 									<p>Nature Photoagraphy</p>
 									<a href="#"><img src="img/arrow-right.png" alt=""></a>
 								</div>
 							</div>
 							<div class="hs-item set-bg" data-setbg="img/hero/new/taneli-lahtinen-N67OsxlDpWw-unsplash.jpg">
 								<div class="hs-info">
-									<h5>Bold Architecture</h5>
+									<h5>Chamonix, France</h5>
 									<p>Cityscape Photography</p>
 									<a href="#"><img src="img/arrow-right.png" alt=""></a>
 								</div>
 							</div>
 							<div class="hs-item set-bg" data-setbg="img/hero/new/ian-schneider-WymR2nYtj5M-unsplash.jpg">
 								<div class="hs-info">
-									<h5>Ice Cold Love</h5>
+									<h5>California, USA</h5>
 									<p>Nature Photoagraphy</p>
 									<a href="#"><img src="img/arrow-right.png" alt=""></a>
 								</div>
