--- a/portfolio.html
+++ b/portfolio.html
@@ -152,9 +152,11 @@
 			</div>
 			<!-- Page end -->
 		</div>
-		<div class="copyright"> <p class="text-center text-md-end text-xl-start"> 
-                <!-- All Rights Reserved -->
-              </p></div>
+		<div class="copyright"> 
+			<!-- <p class="text-center text-md-end text-xl-start"> 
+                All Rights Reserved
+            </p> -->
+		</div>
 	</div>
 	<!-- Main section end -->
 	
