--- a/single-blog.html
+++ b/single-blog.html
@@ -158,9 +158,11 @@
 			</div>
 			<!-- Page end -->
 		</div>
-		<div class="copyright"><p class="text-center text-md-end text-xl-start"> 
+		<div class="copyright">
+			<!-- <p class="text-center text-md-end text-xl-start"> 
                 All Rights Reserved
-              </p></div>
+            </p> -->
+		</div>
 	</div>
 	<!-- Main section end -->
 	
