--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
+	<img src="img/arrow-right.png" alt="">
 <head>
 	<title>Lens - PHOTOGRAPHY STUDIO HTML TEMPLATE</title>
 	<meta charset="UTF-8">
@@ -86,7 +87,7 @@
 						<li>+34 56672 9984 22</li>
 						<li><a href="mailto:contactme@myemail.com">contactme@myemail.com</a></li>
 					</ul>
-					<a href="#" class="site-btn">see my portfolio <img src="img/arrow-right.png" alt=""></a>
+					<a href="portfolio.html" class="site-btn">see my portfolio <img src="img/arrow-right.png" alt=""></a>
 				</div>
 			</div>
 			<!-- Left Side section end -->
