--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,7 @@
 							<div class="portfolio-item">
 								<img src="img/portfolio/mitchell-kmetz-d7Qn3lHTn24-unsplash.jpg" alt="#">
 								<div class="pi-info">
-									<h5>Blue Ridge Mountains</h5>
+									<h5>Blue Ridge</h5>
 									<p>Nature Photoagraphy</p>
 									<a href="#"><img src="img/arrow-right.png" alt=""></a>
 								</div>
