--- a/single-blog.html
+++ b/single-blog.html
@@ -101,7 +101,7 @@
 							</div>
 						</div>
 						<div class="blog-content">
-							<h2>10 Essential photography tips</h2>
+							<h2>7 Simple Photography Tips</h2>
 							<div class="blog-metas">
 								<div class="blog-meta">By Katherine Greene</div>
 								<div class="blog-meta">in Photography</div>
